--- a/css/base/variables.css
+++ b/css/base/variables.css
@@ -39,6 +39,8 @@
   --zindex-overlay: 80;
   --zindex-modal: 100;
   --zindex-hidden: -1;
+  
+  --navbar-height: calc(var(--spacing-sm) * 6.5);
 
   /* Transitions */
   --transition-fast: 150ms cubic-bezier(0.4, 0, 0.2, 1);
