--- a/css/base/reset.css
+++ b/css/base/reset.css
@@ -27,6 +27,9 @@ body {
   color: rgb(var(--color-primary-text));
   line-height: 1.6;
 
+  display: flex;
+  flex-direction: column;
+
   background-color: rgb(var(--color-primary-bg));
 
   min-height: 100dvh;
