--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -5,3 +5,4 @@
 @import url('base/reset.css');
 @import url('base/override.css');
 @import url('modules/navbar.css');
+@import url('modules/footer.css');
