--- a/css/modules/footer.css
+++ b/css/modules/footer.css
@@ -22,6 +22,11 @@
   font-size: var(--fontsize-lg);
 }
 
+.footer-contact {
+  display: flex;
+  flex-direction: column;
+}
+
 @media (min-width: 768px) {
   .footer-container {
     flex-direction: row;
