--- a/css/wrapper.css
+++ b/css/wrapper.css
@@ -6,3 +6,4 @@
 @import url('base/override.css');
 @import url('modules/navbar.css');
 @import url('modules/footer.css');
+@import url('modules/404.css');
